add some more checks to preprocessing

--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -905,6 +905,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [date, quarter, department, day, team, targeted_productivity, smv, wip, over_time, incentive, idle_time, idle_men, no_of_style_change, no_of_workers, actual_productivity, overtime_per_worker]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print all idle_men with decimal values\n",
+    "print(df[df['idle_men'] % 1 != 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [date, quarter, department, day, team, targeted_productivity, smv, wip, over_time, incentive, idle_time, idle_men, no_of_style_change, no_of_workers, actual_productivity, overtime_per_worker]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print all rows with idle time = 0 and idle_men > 0\n",
+    "print(df[(df['idle_time'] == 0) & (df['idle_men'] > 0)])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
