turn department, day, and quarter to one hot encoding

--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +109,7 @@
     "\n",
     "# change all 'finishing ' to 'finishing'\n",
     "df['department'] = df['department'].replace('finishing ', 'finishing')\n",
+    "df['department'] = df['department'].replace('sweing', 'sewing')\n",
     "print(df['department'].unique())"
    ]
   },
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -715,30 +716,10 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      2015-01-01\n",
-      "1      2015-01-01\n",
-      "2      2015-01-01\n",
-      "3      2015-01-01\n",
-      "4      2015-01-01\n",
-      "          ...    \n",
-      "1192   2015-03-11\n",
-      "1193   2015-03-11\n",
-      "1194   2015-03-11\n",
-      "1195   2015-03-11\n",
-      "1196   2015-03-11\n",
-      "Name: date, Length: 1197, dtype: datetime64[ns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# ensure that all the dates are in the same format\n",
-    "df['date'] = pd.to_datetime(df['date'])\n",
-    "print(df['date'])"
+    "#drop date\n",
+    "df = df.drop('date', axis=1)"
    ]
   },
   {
@@ -769,7 +750,7 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [date, quarter, department, day, team, targeted_productivity, smv, wip, over_time, incentive, idle_time, idle_men, no_of_style_change, no_of_workers, actual_productivity]\n",
+      "Columns: [quarter, department, day, team, targeted_productivity, smv, wip, over_time, incentive, idle_time, idle_men, no_of_style_change, no_of_workers, actual_productivity]\n",
       "Index: []\n"
      ]
     }
@@ -788,21 +769,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "date                     datetime64[ns]\n",
-      "quarter                          object\n",
-      "department                       object\n",
-      "day                              object\n",
-      "team                              int64\n",
-      "targeted_productivity           float64\n",
-      "smv                             float64\n",
-      "wip                             float64\n",
-      "over_time                         int64\n",
-      "incentive                         int64\n",
-      "idle_time                       float64\n",
-      "idle_men                          int64\n",
-      "no_of_style_change                int64\n",
-      "no_of_workers                   float64\n",
-      "actual_productivity             float64\n",
+      "quarter                   object\n",
+      "department                object\n",
+      "day                       object\n",
+      "team                       int64\n",
+      "targeted_productivity    float64\n",
+      "smv                      float64\n",
+      "wip                      float64\n",
+      "over_time                  int64\n",
+      "incentive                  int64\n",
+      "idle_time                float64\n",
+      "idle_men                   int64\n",
+      "no_of_style_change         int64\n",
+      "no_of_workers            float64\n",
+      "actual_productivity      float64\n",
       "dtype: object\n"
      ]
     }
@@ -821,77 +801,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "quarter\n",
-      "Quarter1    360\n",
-      "Quarter2    335\n",
-      "Quarter4    248\n",
-      "Quarter3    210\n",
-      "Quarter5     44\n",
-      "Name: count, dtype: int64\n",
-      "quarter\n",
-      "1    360\n",
-      "2    335\n",
-      "4    248\n",
-      "3    210\n",
-      "5     44\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "#convert quarter from Quarter 1 to 1\n",
-    "print(df['quarter'].value_counts())\n",
-    "df['quarter'] = df['quarter'].str.extract('(\\d+)')\n",
-    "print(df['quarter'].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "date                     datetime64[ns]\n",
-      "quarter                           int64\n",
-      "department                       object\n",
-      "day                              object\n",
-      "team                              int64\n",
-      "targeted_productivity           float64\n",
-      "smv                             float64\n",
-      "wip                             float64\n",
-      "over_time                         int64\n",
-      "incentive                         int64\n",
-      "idle_time                       float64\n",
-      "idle_men                          int64\n",
-      "no_of_style_change                int64\n",
-      "no_of_workers                   float64\n",
-      "actual_productivity             float64\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
-   "source": [
-    "# change dtype of quarter to int64\n",
-    "df['quarter'] = df['quarter'].astype('int64')\n",
-    "print(df.dtypes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(490, 16)\n",
-      "(70, 16)\n",
-      "(16, 16)\n",
-      "(2, 16)\n"
+      "(490, 15)\n",
+      "(70, 15)\n",
+      "(16, 15)\n",
+      "(2, 15)\n"
      ]
     }
    ],
@@ -906,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +827,7 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [date, quarter, department, day, team, targeted_productivity, smv, wip, over_time, incentive, idle_time, idle_men, no_of_style_change, no_of_workers, actual_productivity, overtime_per_worker]\n",
+      "Columns: [quarter, department, day, team, targeted_productivity, smv, wip, over_time, incentive, idle_time, idle_men, no_of_style_change, no_of_workers, actual_productivity, overtime_per_worker]\n",
       "Index: []\n"
      ]
     }
@@ -926,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +847,7 @@
      "output_type": "stream",
      "text": [
       "Empty DataFrame\n",
-      "Columns: [date, quarter, department, day, team, targeted_productivity, smv, wip, over_time, incentive, idle_time, idle_men, no_of_style_change, no_of_workers, actual_productivity, overtime_per_worker]\n",
+      "Columns: [quarter, department, day, team, targeted_productivity, smv, wip, over_time, incentive, idle_time, idle_men, no_of_style_change, no_of_workers, actual_productivity, overtime_per_worker]\n",
       "Index: []\n"
      ]
     }
@@ -942,6 +855,68 @@
    "source": [
     "#print all rows with idle time = 0 and idle_men > 0\n",
     "print(df[(df['idle_time'] == 0) & (df['idle_men'] > 0)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quarter                   object\n",
+      "department                object\n",
+      "day                       object\n",
+      "team                       int64\n",
+      "targeted_productivity    float64\n",
+      "smv                      float64\n",
+      "wip                      float64\n",
+      "over_time                  int64\n",
+      "incentive                  int64\n",
+      "idle_time                float64\n",
+      "idle_men                   int64\n",
+      "no_of_style_change         int64\n",
+      "no_of_workers            float64\n",
+      "actual_productivity      float64\n",
+      "overtime_per_worker      float64\n",
+      "dtype: object\n",
+      "PEN\n",
+      "team                       int64\n",
+      "targeted_productivity    float64\n",
+      "smv                      float64\n",
+      "wip                      float64\n",
+      "over_time                  int64\n",
+      "incentive                  int64\n",
+      "idle_time                float64\n",
+      "idle_men                   int64\n",
+      "no_of_style_change         int64\n",
+      "no_of_workers            float64\n",
+      "actual_productivity      float64\n",
+      "overtime_per_worker      float64\n",
+      "department_finishing        bool\n",
+      "department_sweing           bool\n",
+      "day_Monday                  bool\n",
+      "day_Saturday                bool\n",
+      "day_Sunday                  bool\n",
+      "day_Thursday                bool\n",
+      "day_Tuesday                 bool\n",
+      "day_Wednesday               bool\n",
+      "quarter_Quarter1            bool\n",
+      "quarter_Quarter2            bool\n",
+      "quarter_Quarter3            bool\n",
+      "quarter_Quarter4            bool\n",
+      "quarter_Quarter5            bool\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# turn department, day, and quarter into one-hot encoding\n",
+    "df = pd.get_dummies(df, columns=['department', 'day', 'quarter'])\n",
+    "# print all datatypes\n",
+    "print(df.dtypes)"
    ]
   },
   {
