i forgot to save before pushing

--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
      "output_type": "stream",
      "text": [
       "['sweing' 'finishing ' 'finishing']\n",
-      "['sweing' 'finishing']\n"
+      "['sewing' 'finishing']\n"
      ]
     }
    ],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
      "output_type": "stream",
      "text": [
       "department\n",
-      "sweing       691\n",
+      "sewing       691\n",
       "finishing    506\n",
       "Name: count, dtype: int64\n"
      ]
@@ -569,41 +569,41 @@
       "          date   quarter department        day  team  targeted_productivity  \\\n",
       "337  1/20/2015  Quarter3  finishing    Tuesday     5                   0.70   \n",
       "437  1/26/2015  Quarter4  finishing     Monday     3                   0.75   \n",
-      "456  1/27/2015  Quarter4     sweing    Tuesday     2                   0.75   \n",
-      "457  1/27/2015  Quarter4     sweing    Tuesday     3                   0.75   \n",
-      "477  1/28/2015  Quarter4     sweing  Wednesday     2                   0.80   \n",
-      "478  1/28/2015  Quarter4     sweing  Wednesday     3                   0.80   \n",
-      "498  1/29/2015  Quarter5     sweing   Thursday     2                   0.80   \n",
-      "518  1/31/2015  Quarter5     sweing   Saturday     3                   0.80   \n",
-      "519  1/31/2015  Quarter5     sweing   Saturday     2                   0.80   \n",
+      "456  1/27/2015  Quarter4     sewing    Tuesday     2                   0.75   \n",
+      "457  1/27/2015  Quarter4     sewing    Tuesday     3                   0.75   \n",
+      "477  1/28/2015  Quarter4     sewing  Wednesday     2                   0.80   \n",
+      "478  1/28/2015  Quarter4     sewing  Wednesday     3                   0.80   \n",
+      "498  1/29/2015  Quarter5     sewing   Thursday     2                   0.80   \n",
+      "518  1/31/2015  Quarter5     sewing   Saturday     3                   0.80   \n",
+      "519  1/31/2015  Quarter5     sewing   Saturday     2                   0.80   \n",
       "542   2/1/2015  Quarter1  finishing     Sunday     8                   0.65   \n",
-      "543   2/1/2015  Quarter1     sweing     Sunday     2                   0.80   \n",
-      "544   2/1/2015  Quarter1     sweing     Sunday     1                   0.80   \n",
-      "561   2/2/2015  Quarter1     sweing     Monday     1                   0.80   \n",
+      "543   2/1/2015  Quarter1     sewing     Sunday     2                   0.80   \n",
+      "544   2/1/2015  Quarter1     sewing     Sunday     1                   0.80   \n",
+      "561   2/2/2015  Quarter1     sewing     Monday     1                   0.80   \n",
       "580   2/3/2015  Quarter1  finishing    Tuesday     2                   0.80   \n",
-      "581   2/3/2015  Quarter1     sweing    Tuesday     1                   0.80   \n",
-      "599   2/4/2015  Quarter1     sweing  Wednesday     2                   0.80   \n",
-      "600   2/4/2015  Quarter1     sweing  Wednesday     3                   0.80   \n",
-      "618   2/5/2015  Quarter1     sweing   Thursday     2                   0.80   \n",
-      "619   2/5/2015  Quarter1     sweing   Thursday     1                   0.80   \n",
+      "581   2/3/2015  Quarter1     sewing    Tuesday     1                   0.80   \n",
+      "599   2/4/2015  Quarter1     sewing  Wednesday     2                   0.80   \n",
+      "600   2/4/2015  Quarter1     sewing  Wednesday     3                   0.80   \n",
+      "618   2/5/2015  Quarter1     sewing   Thursday     2                   0.80   \n",
+      "619   2/5/2015  Quarter1     sewing   Thursday     1                   0.80   \n",
       "636   2/7/2015  Quarter1  finishing   Saturday     2                   0.80   \n",
-      "637   2/7/2015  Quarter1     sweing   Saturday     2                   0.80   \n",
-      "655   2/8/2015  Quarter2     sweing     Sunday     2                   0.80   \n",
+      "637   2/7/2015  Quarter1     sewing   Saturday     2                   0.80   \n",
+      "655   2/8/2015  Quarter2     sewing     Sunday     2                   0.80   \n",
       "674   2/9/2015  Quarter2  finishing     Monday     2                   0.80   \n",
       "692  2/10/2015  Quarter2  finishing    Tuesday    12                   0.80   \n",
       "711  2/11/2015  Quarter2  finishing  Wednesday     4                   0.70   \n",
       "712  2/11/2015  Quarter2  finishing  Wednesday    12                   0.80   \n",
-      "713  2/11/2015  Quarter2     sweing  Wednesday     2                   0.80   \n",
-      "714  2/11/2015  Quarter2     sweing  Wednesday     1                   0.80   \n",
-      "730  2/12/2015  Quarter2     sweing   Thursday     1                   0.80   \n",
+      "713  2/11/2015  Quarter2     sewing  Wednesday     2                   0.80   \n",
+      "714  2/11/2015  Quarter2     sewing  Wednesday     1                   0.80   \n",
+      "730  2/12/2015  Quarter2     sewing   Thursday     1                   0.80   \n",
       "731  2/12/2015  Quarter2  finishing   Thursday     4                   0.70   \n",
-      "732  2/12/2015  Quarter2     sweing   Thursday     2                   0.80   \n",
-      "749  2/14/2015  Quarter2     sweing   Saturday     1                   0.80   \n",
+      "732  2/12/2015  Quarter2     sewing   Thursday     2                   0.80   \n",
+      "749  2/14/2015  Quarter2     sewing   Saturday     1                   0.80   \n",
       "766  2/15/2015  Quarter3  finishing     Sunday     1                   0.80   \n",
       "767  2/15/2015  Quarter3  finishing     Sunday     2                   0.80   \n",
-      "768  2/15/2015  Quarter3     sweing     Sunday     1                   0.80   \n",
-      "785  2/16/2015  Quarter3     sweing     Monday     1                   0.80   \n",
-      "803  2/17/2015  Quarter3     sweing    Tuesday     1                   0.80   \n",
+      "768  2/15/2015  Quarter3     sewing     Sunday     1                   0.80   \n",
+      "785  2/16/2015  Quarter3     sewing     Monday     1                   0.80   \n",
+      "803  2/17/2015  Quarter3     sewing    Tuesday     1                   0.80   \n",
       "\n",
       "       smv      wip  over_time  incentive  idle_time  idle_men  \\\n",
       "337   4.15      0.0       1440          0        0.0         0   \n",
@@ -859,30 +859,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "quarter                   object\n",
-      "department                object\n",
-      "day                       object\n",
-      "team                       int64\n",
-      "targeted_productivity    float64\n",
-      "smv                      float64\n",
-      "wip                      float64\n",
-      "over_time                  int64\n",
-      "incentive                  int64\n",
-      "idle_time                float64\n",
-      "idle_men                   int64\n",
-      "no_of_style_change         int64\n",
-      "no_of_workers            float64\n",
-      "actual_productivity      float64\n",
-      "overtime_per_worker      float64\n",
-      "dtype: object\n",
-      "PEN\n",
       "team                       int64\n",
       "targeted_productivity    float64\n",
       "smv                      float64\n",
@@ -896,7 +879,7 @@
       "actual_productivity      float64\n",
       "overtime_per_worker      float64\n",
       "department_finishing        bool\n",
-      "department_sweing           bool\n",
+      "department_sewing           bool\n",
       "day_Monday                  bool\n",
       "day_Saturday                bool\n",
       "day_Sunday                  bool\n",
@@ -917,6 +900,96 @@
     "df = pd.get_dummies(df, columns=['department', 'day', 'quarter'])\n",
     "# print all datatypes\n",
     "print(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      targeted_productivity  idle_men  idle_time  actual_productivity  \\\n",
+      "1                      0.75         0        0.0             0.886500   \n",
+      "6                      0.75         0        0.0             0.755167   \n",
+      "13                     0.65         0        0.0             0.705917   \n",
+      "14                     0.75         0        0.0             0.676667   \n",
+      "15                     0.75         0        0.0             0.593056   \n",
+      "...                     ...       ...        ...                  ...   \n",
+      "1192                   0.75         0        0.0             0.628333   \n",
+      "1193                   0.70         0        0.0             0.625625   \n",
+      "1194                   0.65         0        0.0             0.625625   \n",
+      "1195                   0.75         0        0.0             0.505889   \n",
+      "1196                   0.70         0        0.0             0.394722   \n",
+      "\n",
+      "      incentive  over_time  wip   smv  \n",
+      "1             0        960  0.0  3.94  \n",
+      "6             0        960  0.0  3.94  \n",
+      "13            0        960  0.0  3.94  \n",
+      "14            0        960  0.0  2.90  \n",
+      "15            0       2160  0.0  3.94  \n",
+      "...         ...        ...  ...   ...  \n",
+      "1192          0        960  0.0  2.90  \n",
+      "1193          0        960  0.0  3.90  \n",
+      "1194          0        960  0.0  3.90  \n",
+      "1195          0       1800  0.0  2.90  \n",
+      "1196          0        720  0.0  2.90  \n",
+      "\n",
+      "[600 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check for days where there are no incentives but have overtime (trim to targeted_productivity, idle_men, idle_time, and actual_productivity)\n",
+    "print(df[(df['incentive'] == 0) & (df['over_time'] > 0)][['targeted_productivity', 'idle_men', 'idle_time', 'actual_productivity', 'incentive', 'over_time', 'wip', 'smv']])\n",
+    "\n",
+    "# TODO SOMETHING HERE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      targeted_productivity  idle_men  idle_time  actual_productivity  \\\n",
+      "0                      0.80         0        0.0             0.940725   \n",
+      "2                      0.80         0        0.0             0.800570   \n",
+      "3                      0.80         0        0.0             0.800570   \n",
+      "4                      0.80         0        0.0             0.800382   \n",
+      "5                      0.80         0        0.0             0.800125   \n",
+      "...                     ...       ...        ...                  ...   \n",
+      "1187                   0.75         0        0.0             0.750051   \n",
+      "1188                   0.70         0        0.0             0.700557   \n",
+      "1189                   0.70         0        0.0             0.700505   \n",
+      "1190                   0.70         0        0.0             0.700246   \n",
+      "1191                   0.65         0        0.0             0.650596   \n",
+      "\n",
+      "      incentive  over_time     wip    smv  \n",
+      "0            98       7080  1108.0  26.16  \n",
+      "2            50       3660   968.0  11.41  \n",
+      "3            50       3660   968.0  11.41  \n",
+      "4            50       1920  1170.0  25.90  \n",
+      "5            38       6720   984.0  25.90  \n",
+      "...         ...        ...     ...    ...  \n",
+      "1187         45       7080  1054.0  26.82  \n",
+      "1188         30       6960   992.0  26.82  \n",
+      "1189         30       6840   914.0  30.48  \n",
+      "1190         40       4560  1128.0  23.41  \n",
+      "1191         26       6840   935.0  30.48  \n",
+      "\n",
+      "[566 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check overtime and incentive relationship\n",
+    "print(df[(df['incentive'] > 0) & (df['over_time'] > 0)][['targeted_productivity', 'idle_men', 'idle_time', 'actual_productivity', 'incentive', 'over_time', 'wip', 'smv']])"
    ]
   },
   {
