--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -28,7 +28,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II. Data Preprocessing and Cleaning\n"
+    "## II. Description of the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III. List of requirements"
    ]
   },
   {
@@ -44,6 +51,13 @@
     "\n",
     "# load the dataset from Dataset folder\n",
     "df = pd.read_csv('Dataset 2 - Garments Dataset/garments.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IV. Data Preprocessing and Cleaning\n"
    ]
   },
   {
@@ -225,8 +239,8 @@
       "team\n",
       "8     109\n",
       "2     109\n",
-      "1     105\n",
       "4     105\n",
+      "1     105\n",
       "9     104\n",
       "10    100\n",
       "12     99\n",
@@ -286,11 +300,11 @@
       "30.10     79\n",
       "4.15      76\n",
       "        ... \n",
-      "48.68      1\n",
-      "54.56      1\n",
-      "41.19      1\n",
-      "49.10      1\n",
-      "40.99      1\n",
+      "38.09      1\n",
+      "48.18      1\n",
+      "30.40      1\n",
+      "50.89      1\n",
+      "20.20      1\n",
       "Name: count, Length: 70, dtype: int64\n"
      ]
     }
@@ -312,14 +326,14 @@
       "0.0       506\n",
       "1039.0      5\n",
       "1282.0      4\n",
-      "1422.0      3\n",
-      "1216.0      3\n",
+      "983.0       3\n",
+      "1082.0      3\n",
       "         ... \n",
-      "1635.0      1\n",
-      "1519.0      1\n",
-      "1337.0      1\n",
-      "1118.0      1\n",
-      "914.0       1\n",
+      "1674.0      1\n",
+      "290.0       1\n",
+      "971.0       1\n",
+      "992.0       1\n",
+      "1511.0      1\n",
       "Name: count, Length: 549, dtype: int64\n"
      ]
     }
@@ -395,17 +409,17 @@
      "output_type": "stream",
      "text": [
       "over_time\n",
-      "960      129\n",
-      "1440     111\n",
-      "6960      61\n",
-      "6840      48\n",
-      "1200      39\n",
-      "        ... \n",
-      "4140       1\n",
-      "12180      1\n",
-      "10770      1\n",
-      "12000      1\n",
-      "3120       1\n",
+      "960     129\n",
+      "1440    111\n",
+      "6960     61\n",
+      "6840     48\n",
+      "1200     39\n",
+      "       ... \n",
+      "5700      1\n",
+      "1680      1\n",
+      "1700      1\n",
+      "4680      1\n",
+      "3120      1\n",
       "Name: count, Length: 143, dtype: int64\n"
      ]
     }
@@ -447,13 +461,13 @@
       "0.0      1179\n",
       "3.5         3\n",
       "2.0         2\n",
-      "5.0         2\n",
       "8.0         2\n",
-      "4.5         2\n",
       "4.0         2\n",
+      "4.5         2\n",
+      "5.0         2\n",
       "90.0        1\n",
-      "150.0       1\n",
       "270.0       1\n",
+      "150.0       1\n",
       "300.0       1\n",
       "6.5         1\n",
       "Name: count, dtype: int64\n"
@@ -480,8 +494,8 @@
       "30       3\n",
       "20       3\n",
       "35       2\n",
-      "45       1\n",
       "37       1\n",
+      "45       1\n",
       "25       1\n",
       "40       1\n",
       "Name: count, dtype: int64\n"
@@ -555,16 +569,16 @@
      "text": [
       "actual_productivity\n",
       "0.800402    24\n",
-      "0.971867    12\n",
       "0.850137    12\n",
-      "0.750651    11\n",
+      "0.971867    12\n",
       "0.850502    11\n",
+      "0.750651    11\n",
       "            ..\n",
-      "0.800034     1\n",
-      "0.800024     1\n",
-      "0.769293     1\n",
-      "0.750031     1\n",
-      "0.394722     1\n",
+      "0.894444     1\n",
+      "0.900061     1\n",
+      "0.909392     1\n",
+      "0.920000     1\n",
+      "0.521180     1\n",
       "Name: count, Length: 879, dtype: int64\n",
       "          date   quarter department        day  team  targeted_productivity  \\\n",
       "337  1/20/2015  Quarter3  finishing    Tuesday     5                   0.70   \n",
@@ -904,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -993,17 +1007,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1197 entries, 0 to 1196\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   team                   1197 non-null   int64  \n",
+      " 1   targeted_productivity  1197 non-null   float64\n",
+      " 2   smv                    1197 non-null   float64\n",
+      " 3   wip                    1197 non-null   float64\n",
+      " 4   over_time              1197 non-null   int64  \n",
+      " 5   incentive              1197 non-null   int64  \n",
+      " 6   idle_time              1197 non-null   float64\n",
+      " 7   idle_men               1197 non-null   int64  \n",
+      " 8   no_of_style_change     1197 non-null   int64  \n",
+      " 9   no_of_workers          1197 non-null   float64\n",
+      " 10  actual_productivity    1197 non-null   float64\n",
+      " 11  overtime_per_worker    1197 non-null   float64\n",
+      " 12  department_finishing   1197 non-null   bool   \n",
+      " 13  department_sewing      1197 non-null   bool   \n",
+      " 14  day_Monday             1197 non-null   bool   \n",
+      " 15  day_Saturday           1197 non-null   bool   \n",
+      " 16  day_Sunday             1197 non-null   bool   \n",
+      " 17  day_Thursday           1197 non-null   bool   \n",
+      " 18  day_Tuesday            1197 non-null   bool   \n",
+      " 19  day_Wednesday          1197 non-null   bool   \n",
+      " 20  quarter_Quarter1       1197 non-null   bool   \n",
+      " 21  quarter_Quarter2       1197 non-null   bool   \n",
+      " 22  quarter_Quarter3       1197 non-null   bool   \n",
+      " 23  quarter_Quarter4       1197 non-null   bool   \n",
+      " 24  quarter_Quarter5       1197 non-null   bool   \n",
+      "dtypes: bool(13), float64(7), int64(5)\n",
+      "memory usage: 127.5 KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#check cleaned dataset\n",
+    "print(df.info())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# III. Exploratory Data Analysis"
+    "# V. Exploratory Data Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EDA\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"EDA\")"
    ]
@@ -1012,63 +1084,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IV. Initial Model Training"
+    "## V-A. <EDA 1>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IV-A. Linear Regression"
+    "## V-B. <EDA 2>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IV-B. Decision Trees"
+    "## V-C. <EDA 3>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### IV-C. Neural Network"
+    "## V-D. <EDA 4>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V. Error Analysis"
+    "# VI. Initial Model Training"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VI. Improving Model Performance"
+    "## VI-A. Linear Regression"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VII. Model Performance Summary"
+    "## VI-B. Decision Trees"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## VIII. Insights and Conclusions"
+    "## VI-C. Neural Network"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IX. References"
+    "# VII. Error Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VIII. Improving Model Performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# IX. Model Performance Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# X. Insights and Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# XI. References"
    ]
   }
  ],
@@ -1088,7 +1188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
