Finished EDA 3 (Tean)

--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -1065,23 +1065,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EDA\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"EDA\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1106,7 +1089,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seclude the relevant fields for the EDA"
+    "### Description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the Philippines, a company typically pays its workers at the end of the 2nd and 4th week of every month. With this, it can be speculated that the actual productivity of the workers will be affected when in the proximity of those times as they anticipate receiving their paychecks. Additionally, with the chosen representation, it will also be possible to analyze actual productivity as the month goes by."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Relevant fields of the EDA:\n",
+    "\n",
+    "Days of the Week:\n",
+    "- 'day_Monday'\n",
+    "- 'day_Tuesday'\n",
+    "- 'day_Wednesday'\n",
+    "- 'day_Thursday'\n",
+    "- 'day_Saturday'\n",
+    "- 'day_Sunday'\n",
+    "\n",
+    "Quarters of the Month:\n",
+    "- 'quarter_Quarter1'\n",
+    "- 'quarter_Quarter2'\n",
+    "- 'quarter_Quarter3'\n",
+    "- 'quarter_Quarter4'\n",
+    "- 'quarter_Quarter5'\n",
+    "\n",
+    "Actual Productivity:\n",
+    "- 'actual_productivity'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Transformation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seclude the relevant fields for the EDA."
    ]
   },
   {
@@ -1375,8 +1404,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transform the relevant fields into more easily processable values."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,151 +1421,33 @@
     "\n",
     "# Make day_of_week and quarter columns\n",
     "day_quarter_productivity_df.loc[:, 'day_of_week'] = day_quarter_productivity_df[['day_Monday', 'day_Tuesday', 'day_Wednesday', 'day_Thursday', 'day_Saturday', 'day_Sunday']].idxmax(axis=1).str.split('_').str[1]\n",
-    "day_quarter_productivity_df.loc[:, 'quarter'] = day_quarter_productivity_df[['quarter_Quarter1', 'quarter_Quarter2', 'quarter_Quarter3', 'quarter_Quarter4', 'quarter_Quarter5']].idxmax(axis=1).str.split('_').str[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "day_quarter_productivity_df.loc[:, 'quarter'] = day_quarter_productivity_df[['quarter_Quarter1', 'quarter_Quarter2', 'quarter_Quarter3', 'quarter_Quarter4', 'quarter_Quarter5']].idxmax(axis=1).str.split('_').str[1]\n",
+    "\n",
     "# Drop the one-hot encoded columns\n",
-    "day_quarter_productivity_df = day_quarter_productivity_df.drop(['day_Monday', 'day_Tuesday', 'day_Wednesday', 'day_Thursday', 'day_Saturday', 'day_Sunday', 'quarter_Quarter1', 'quarter_Quarter2', 'quarter_Quarter3', 'quarter_Quarter4', 'quarter_Quarter5'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>actual_productivity</th>\n",
-       "      <th>day_of_week</th>\n",
-       "      <th>quarter</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.940725</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>Quarter1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.886500</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>Quarter1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.800570</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>Quarter1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.800570</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>Quarter1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.800382</td>\n",
-       "      <td>Thursday</td>\n",
-       "      <td>Quarter1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1192</th>\n",
-       "      <td>0.628333</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>Quarter2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1193</th>\n",
-       "      <td>0.625625</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>Quarter2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1194</th>\n",
-       "      <td>0.625625</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>Quarter2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1195</th>\n",
-       "      <td>0.505889</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>Quarter2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1196</th>\n",
-       "      <td>0.394722</td>\n",
-       "      <td>Wednesday</td>\n",
-       "      <td>Quarter2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1197 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      actual_productivity day_of_week   quarter\n",
-       "0                0.940725    Thursday  Quarter1\n",
-       "1                0.886500    Thursday  Quarter1\n",
-       "2                0.800570    Thursday  Quarter1\n",
-       "3                0.800570    Thursday  Quarter1\n",
-       "4                0.800382    Thursday  Quarter1\n",
-       "...                   ...         ...       ...\n",
-       "1192             0.628333   Wednesday  Quarter2\n",
-       "1193             0.625625   Wednesday  Quarter2\n",
-       "1194             0.625625   Wednesday  Quarter2\n",
-       "1195             0.505889   Wednesday  Quarter2\n",
-       "1196             0.394722   Wednesday  Quarter2\n",
-       "\n",
-       "[1197 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "day_quarter_productivity_df = day_quarter_productivity_df.drop(['day_Monday', 'day_Tuesday', 'day_Wednesday', 'day_Thursday', 'day_Saturday', 'day_Sunday', 'quarter_Quarter1', 'quarter_Quarter2', 'quarter_Quarter3', 'quarter_Quarter4', 'quarter_Quarter5'], axis=1)\n",
+    "\n",
     "day_quarter_productivity_df"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Representation and Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pivot Tables specialize in representing grouped data of many dimensions into a neat table format, where the rows and columns are the groupings and the cells are the featured values.\n",
+    "As the EDA features 1 quantitative and 2 qualitative features, a Pivot Table should be the most fitting representation. \n",
+    "This lets us create a table who's columns are the days of the week, rows are the quarters of the month, and cells are the means of the actual productivities grouped by the columns and rows."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1636,6 +1554,7 @@
     }
    ],
    "source": [
+    "# Create a pivot table\n",
     "pivot_table = day_quarter_productivity_df.pivot_table(\n",
     "    values='actual_productivity', \n",
     "    index='quarter', \n",
@@ -1650,8 +1569,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To better visualize the Pivot Table, a Heat Map can be made to highlight the trends of the data in each grouping."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1673,9 +1599,25 @@
     "plt.xticks(np.arange(6), pivot_table.columns)\n",
     "plt.yticks(np.arange(5), pivot_table.index)\n",
     "plt.xlabel('Day of the Week')\n",
-    "plt.ylabel('Quarter')\n",
-    "plt.title('Average Productivity by Day of the Week and Quarter')\n",
+    "plt.ylabel('Quarter of the Month')\n",
+    "plt.title('Average Productivity by Day of the Week and Quarter of the Month')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Findings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Actual productivity of workers decreases as the month goes by, with the later half of the month being darker than the start. \n",
+    "- The start of Quarter 3 and the end of Quarter 4 are especially dark, suggesting that the workers are less productive after receiving their 1st monthly paycheck and before receiving their 2nd monthly paycheck.\n",
+    "- Quarter 5 is very productive as its colors are way brighter. However, this may be an outlier due to the only Quarter 5 days being 1/29/2015 and 1/31/2025."
    ]
   },
   {
