--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +51,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Rapha\\AppData\\Local\\Temp\\ipykernel_7608\\1149638224.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "# Importing the libraries\n",
     "import pandas as pd\n",
@@ -84,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -261,8 +276,8 @@
       "team\n",
       "8     109\n",
       "2     109\n",
-      "4     105\n",
       "1     105\n",
+      "4     105\n",
       "9     104\n",
       "10    100\n",
       "12     99\n",
@@ -281,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -322,11 +337,11 @@
       "30.10     79\n",
       "4.15      76\n",
       "        ... \n",
-      "38.09      1\n",
-      "48.18      1\n",
-      "30.40      1\n",
-      "50.89      1\n",
-      "20.20      1\n",
+      "48.68      1\n",
+      "54.56      1\n",
+      "41.19      1\n",
+      "49.10      1\n",
+      "40.99      1\n",
       "Name: count, Length: 70, dtype: int64\n"
      ]
     }
@@ -337,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -348,14 +363,14 @@
       "0.0       506\n",
       "1039.0      5\n",
       "1282.0      4\n",
-      "983.0       3\n",
-      "1082.0      3\n",
+      "1422.0      3\n",
+      "1216.0      3\n",
       "         ... \n",
-      "1674.0      1\n",
-      "290.0       1\n",
-      "971.0       1\n",
-      "992.0       1\n",
-      "1511.0      1\n",
+      "1635.0      1\n",
+      "1519.0      1\n",
+      "1337.0      1\n",
+      "1118.0      1\n",
+      "914.0       1\n",
       "Name: count, Length: 549, dtype: int64\n"
      ]
     }
@@ -366,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -431,17 +446,17 @@
      "output_type": "stream",
      "text": [
       "over_time\n",
-      "960     129\n",
-      "1440    111\n",
-      "6960     61\n",
-      "6840     48\n",
-      "1200     39\n",
-      "       ... \n",
-      "5700      1\n",
-      "1680      1\n",
-      "1700      1\n",
-      "4680      1\n",
-      "3120      1\n",
+      "960      129\n",
+      "1440     111\n",
+      "6960      61\n",
+      "6840      48\n",
+      "1200      39\n",
+      "        ... \n",
+      "4140       1\n",
+      "12180      1\n",
+      "10770      1\n",
+      "12000      1\n",
+      "3120       1\n",
       "Name: count, Length: 143, dtype: int64\n"
      ]
     }
@@ -452,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -483,13 +498,13 @@
       "0.0      1179\n",
       "3.5         3\n",
       "2.0         2\n",
-      "8.0         2\n",
-      "4.0         2\n",
-      "4.5         2\n",
       "5.0         2\n",
+      "8.0         2\n",
+      "4.5         2\n",
+      "4.0         2\n",
       "90.0        1\n",
-      "270.0       1\n",
       "150.0       1\n",
+      "270.0       1\n",
       "300.0       1\n",
       "6.5         1\n",
       "Name: count, dtype: int64\n"
@@ -502,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -516,8 +531,8 @@
       "30       3\n",
       "20       3\n",
       "35       2\n",
-      "37       1\n",
       "45       1\n",
+      "37       1\n",
       "25       1\n",
       "40       1\n",
       "Name: count, dtype: int64\n"
@@ -530,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -591,16 +606,16 @@
      "text": [
       "actual_productivity\n",
       "0.800402    24\n",
-      "0.850137    12\n",
       "0.971867    12\n",
-      "0.850502    11\n",
+      "0.850137    12\n",
       "0.750651    11\n",
+      "0.850502    11\n",
       "            ..\n",
-      "0.894444     1\n",
-      "0.900061     1\n",
-      "0.909392     1\n",
-      "0.920000     1\n",
-      "0.521180     1\n",
+      "0.800034     1\n",
+      "0.800024     1\n",
+      "0.769293     1\n",
+      "0.750031     1\n",
+      "0.394722     1\n",
       "Name: count, Length: 879, dtype: int64\n",
       "          date   quarter department        day  team  targeted_productivity  \\\n",
       "337  1/20/2015  Quarter3  finishing    Tuesday     5                   0.70   \n",
@@ -729,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -895,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -940,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1089,14 +1104,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V-A. <EDA 1>"
+    "## V-A. <EDA 1> (Seal)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V-B. <EDA 2>"
+    "## V-B. <EDA 2> (Orrin)"
    ]
   },
   {
@@ -1765,7 +1780,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## V-D. <EDA 4>"
+    "## V-D. SMV to Number of Workers and Overtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "smv_nw_overtime_df = df[['smv', 'no_of_workers', 'over_time']]"
    ]
   },
   {
@@ -3304,7 +3328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
