Removed score evaluation because it is the same as R^2

--- a/machine_project_notebook.ipynb
+++ b/machine_project_notebook.ipynb
@@ -3445,6 +3445,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As sklearn's StandardScaler standardizes all feature columns regardless of datatype, need to exclude boolean columns from the standardization to maintain their values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Get all non-boolean columns for standardization"
    ]
   },
@@ -3501,6 +3508,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display head and columns of standardizes datasets to check values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 545,
    "metadata": {},
@@ -3545,7 +3559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3553,14 +3567,10 @@
     "    \n",
     "    # Predictions\n",
     "    if scaled:\n",
-    "        train_score = model.score(X_train_scaled, y_train)\n",
-    "        test_score = model.score(X_test_scaled, y_test)\n",
     "        y_train_pred = model.predict(X_train_scaled)\n",
     "        y_test_pred = model.predict(X_test_scaled)\n",
     "        \n",
     "    else:\n",
-    "        train_score = model.score(X_train, y_train)\n",
-    "        test_score = model.score(X_test, y_test)\n",
     "        y_train_pred = model.predict(X_train)\n",
     "        y_test_pred = model.predict(X_test)\n",
     "\n",
@@ -3568,9 +3578,6 @@
     "    train_mse = mean_squared_error(y_train, y_train_pred)\n",
     "    test_mse = mean_squared_error(y_test, y_test_pred)\n",
     "\n",
-    "    print(model_name + ' Train Score:', train_score)\n",
-    "    print(model_name + ' Test Score:', test_score)\n",
-    "    print('')\n",
     "    print(model_name + ' Train MSE:', train_mse)\n",
     "    print(model_name + ' Test MSE:', test_mse)\n",
     "    print('')\n",
